[project]
name = "aw"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Alexander Wu", email = "alexander.wu@roche.com" }]
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.25.2",
    "scipy>=1.9.3",
    "ipython>=8.14.0",
    "ipykernel>=6.25.1",
    "jinja2>=3.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
